# megabanx-invoicing

./: .gitignore  .lintstagedrc.json  Architecture-2.0.md  README.md  STRUCTURE.md  megabanx-2.0-plan.md  package-lock.json  package.json
backend-v2/: .env.example  alembic.ini  pyproject.toml
backend-v2/alembic/: README.md  env.py
backend-v2/alembic/versions/: 0001_initial_baseline.py  0002_stage4_email_templates_and_log.py  0003_stage6a_company_contact_and_bank_accounts.py  0004_stage6b_invoice_template.py  0005_stage9_billing_stripe.py  0006_stage8_invoice_subtotal.py  0007_free_plan_invoices_limit_10.py  0008_invoice_duplicate_of_id.py
backend-v2/app/: config.py  database.py  dependencies.py  main.py
backend-v2/app/models/: __init__.py  admin.py  billing.py  company.py  contact.py  drive.py  email_link.py  invoice.py  invoicing.py  notification.py  profile.py  sharing.py  user.py
backend-v2/app/routers/: __init__.py  admin.py  auth.py  billing.py  companies.py  contact.py  invoices.py  invoicing.py  notifications.py  profiles.py  sharing.py
backend-v2/app/schemas/: __init__.py  auth.py  company.py  contact.py  invoice.py  invoicing.py  profile.py  sharing.py
backend-v2/app/services/: access.py  auth_service.py  eik_lookup.py  email_service.py  encryption.py  file_manager.py  gemini.py  google_drive.py  matching.py  pdf_service.py  plans.py  stripe_service.py  ws_manager.py
backend-v2/app/templates/: invoice_branded.html  invoice_classic.html  invoice_pdf.html  invoice_standard.html  proforma_pdf.html
backend-v2/app/utils/: helpers.py
(+241 files in other folders)
